[project]
name = "brand-listener"
version = "0.1.0"
description = "Brand Listener - LangGraph MVP for monitoring brand updates"
authors = [{name = "Brand Listener Team"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langgraph>=0.0.40",
    "langchain>=0.1.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]
api = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "websockets>=12.0",
]
monitoring = [
    "watchfiles>=0.20.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"